# maghammer

./: Cargo.toml  LICENSE  atsc_backend.py  config.toml  sbert_server.py
idiosyncratic-scimitar/: Cargo.toml  config.toml  sbert_server.py
idiosyncratic-scimitar/src/: error.rs  indexer.rs  semantic.rs  util.rs
idiosyncratic-scimitar/src/indexers/: miniflux.rs  rclwe.rs  thunderbird_email.rs
src/: indexer.rs  main.rs  semantic.rs  util.rs
src/indexers/: anki.rs  atuin.rs  books.rs  firefox_history_dump.rs  mediafiles.rs  minoteaur.rs  mod.rs  rclwe.rs  textfiles.rs  thunderbird_email.rs
static/: style.css
